--- a/index.html
+++ b/index.html
@@ -8,17 +8,35 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
+    <div id="particles-js"></div>
     <div class="wrapper">
         <header>
             <nav>
                 <ul class="nav-ul">
-                    <li class="nav-li"><button>🞬</button></li>
                     <li class="nav-li"><a class ="nav-link" href="#">Scoreboard</a></li>
                     <li class="nav-li"><a class ="nav-link" href="#">Events</a></li>
+                    <li class="nav-li"><a class ="nav-link" href="#">Schedule</a></li>
                     <li class="nav-li"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
             </nav>
         </header>
+        <main>
+            <div class="heading-main">
+                <div class="logo-container">
+                    <img class="logo" src="disha-logo.jpg" alt="DISHA '20">
+                </div>
+                <p class="word">DISHA</p>
+                <p class="year">&lsquo;20</p>
+                <p class="slogan">where passion meets inspiration</p>
+                <p class="main-date">January 17, 18, 19</p>
+            </div>
+        </main>
+        <footer>
+            <p>Copyright &copy; 2020</p>
+        </footer>
+
     </div>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
