--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DISHA '20 | College of Engineering Trivandrum</title>
     <link rel="stylesheet" href="main.css" type="text/css">
+    <script src="https://use.fontawesome.com/f98ecc5a39.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -13,10 +14,15 @@
         <header>
             <nav>
                 <ul class="nav-ul">
-                    <li class="nav-li"><a class ="nav-link" href="#">Scoreboard</a></li>
-                    <li class="nav-li"><a class ="nav-link" href="#">Events</a></li>
-                    <li class="nav-li"><a class ="nav-link" href="#">Schedule</a></li>
-                    <li class="nav-li"><a class ="nav-link" href="#">The Team</a></li>
+                    <li class="nav-li icon">
+                        <a href="javascript:void(0);" class="nav-link" onclick="collapse()">
+                            <i class="fa fa-bars" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Scoreboard</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Events</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Schedule</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
             </nav>
         </header>
