--- a/scoreboard.html
+++ b/scoreboard.html
@@ -19,7 +19,7 @@
                             <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Events</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Schedule</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
@@ -27,15 +27,7 @@
             </nav>
         </header>
         <main>
-            <div class="heading-main">
-                <div class="logo-container">
-                    <img class="logo" src="disha-logo.jpg" alt="DISHA '20">
-                </div>
-                <p class="word">DISHA</p>
-                <p class="year">&lsquo;20</p>
-                <p class="slogan">where passion meets inspiration</p>
-                <p class="main-date">January 17, 18, 19</p>
-            </div>
+            Scoreboard
         </main>
         <footer>
             <p>Copyright &copy; 2020</p>
