--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                             <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
                         </a>
                     </li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html" style="opacity: 1;">Home</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Events</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Schedule</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
