--- a/scoreboard.html
+++ b/scoreboard.html
@@ -19,15 +19,55 @@
                             <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Scoreboard</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Events</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html" style="opacity: 1;">Scoreboard</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Schedule</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            Scoreboard
+            <div class="content-container">
+                <h1 class="page-heading">Scoreboard</h1>
+                <table class="score-table" cellspacing="0px">
+                    <tr>
+                        <th>#</th>
+                        <th>Department</th>
+                        <th>Points</th>
+                    </tr>
+                    <tr>
+                        <td>1.</td>
+                        <td>Electronics and Communications</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td>Mechanical</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>Computer Science</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>4.</td>
+                        <td>Civil</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>Electrical</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>Architecture</td>
+                        <td>200</td>
+                    </tr>
+                </table>
+            </div>
         </main>
         <footer>
             <p>Copyright &copy; 2020</p>
