--- a/scoreboard.html
+++ b/scoreboard.html
@@ -22,7 +22,7 @@
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html">Home</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html" style="opacity: 1;">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">Schedule</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html">Schedule</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
             </nav>
