--- a/schedule.html
+++ b/schedule.html
@@ -19,23 +19,20 @@
                             <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html" style="opacity: 1;">Home</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html">Home</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link">Schedule</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html" style="opacity: 1;">Schedule</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div class="heading-main">
-                <div class="logo-container">
-                    <img class="logo" src="disha-logo.jpg" alt="DISHA '20">
+            <div class="content-container">
+                <h1 class="page-heading">Schedule</h1>
+
                 </div>
-                <p class="word">DISHA</p>
-                <p class="year">&lsquo;20</p>
-                <p class="slogan">where passion meets inspiration</p>
-                <p class="main-date">January 17, 18, 19</p>
+
             </div>
         </main>
         <footer>
@@ -44,7 +41,6 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="events.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
