--- a/results.html
+++ b/results.html
@@ -23,7 +23,7 @@
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html" style="opacity: 1;">Results</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html">Schedule</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="team.html">The Team</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,24 +32,9 @@
                 <h1 class="page-heading">Results</h1>
                 <div class="result-container">
                     <div class="event-container">
-                        <h1 class="event-name">
-                            PUBG
-                        </h1>
-                        <ul class="winners">
-                            <li><span class="winner-name">1. CS</span><span class="winner-points">25 pts.</span></li>
-                            <li><span class="winner-name">2. EC</span><span class="winner-points">25 pts.</span></li>
-                            <li><span class="winner-name">3. Arch</span><span class="winner-points">25 pts.</span></li>
-                        </ul>
-                    </div>
-                    <div class="event-container">
-                        <h1 class="event-name">
-                            PES
-                        </h1>
-                        <ul class="winners">
-                            <li><span class="winner-name">1. CS</span><span class="winner-points">25 pts.</span></li>
-                            <li><span class="winner-name">2. EC</span><span class="winner-points">15 pts.</span></li>
-                            <li><span class="winner-name">3. Arch</span><span class="winner-points">12 pts.</span></li>
-                        </ul>
+                        <h3 class="event-name">
+                            Results will be published soon.
+                        </h3>
                     </div>
 
                 </div>
