--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html" style="opacity: 1;">Home</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link">Schedule</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html">Schedule</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="team.html">The Team</a></li>
                 </ul>
             </nav>
         </header>
