--- a/schedule.html
+++ b/schedule.html
@@ -23,16 +23,33 @@
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html" style="opacity: 1;">Schedule</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="team.html">The Team</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
-
-                </div>
-
+                    <div class="schedule-container">
+                        <h1 class="schedule-date">January 10</h1>
+                        <table class="schedule-table">
+                            <tr>
+                                <td>ICE BREAK</td>
+                                <td>3:30PM</td>
+                                <td>DHWANI STAGE</td>
+                            </tr>
+                            <tr>
+                                <td>PUBG MOBILE</td>
+                                <td>5:00PM</td>
+                                <td>DHWANI STAGE</td>
+                            </tr>
+                            <tr>
+                                <td>DISHA TECHIE</td>
+                                <td>5:00PM</td>
+                                <td>EC DEPARTMENT</td>
+                            </tr>
+                        </table>
+                    </div>
             </div>
         </main>
         <footer>
