--- a/scoreboard.html
+++ b/scoreboard.html
@@ -23,7 +23,7 @@
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html" style="opacity: 1;">Scoreboard</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="results.html">Results</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="schedule.html">Schedule</a></li>
-                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="#">The Team</a></li>
+                    <li class="nav-li" id="nav-link"><a class ="nav-link" href="team.html">The Team</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,32 +39,32 @@
                     <tr>
                         <td>1.</td>
                         <td>Electronics and Communications</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <td>2.</td>
                         <td>Mechanical</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <td>3.</td>
                         <td>Computer Science</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <td>4.</td>
                         <td>Civil</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <td>5.</td>
                         <td>Electrical</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <td>6.</td>
                         <td>Architecture</td>
-                        <td>200</td>
+                        <td>0</td>
                     </tr>
                 </table>
             </div>
