Fix scoreboard names

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -38,32 +38,32 @@
                     </tr>
                     <tr>
                         <td>1.</td>
-                        <td>Electronics and Communications</td>
+                        <td>Electronics and Communications Dept.</td>
                         <td>0</td>
                     </tr>
                     <tr>
                         <td>2.</td>
-                        <td>Mechanical</td>
+                        <td>Mechanical Dept.</td>
                         <td>0</td>
                     </tr>
                     <tr>
                         <td>3.</td>
-                        <td>Computer Science</td>
+                        <td>Computer Science Dept.</td>
                         <td>0</td>
                     </tr>
                     <tr>
                         <td>4.</td>
-                        <td>Civil</td>
+                        <td>Civil Dept.</td>
                         <td>0</td>
                     </tr>
                     <tr>
                         <td>5.</td>
-                        <td>Electrical</td>
+                        <td>Electrical Dept.</td>
                         <td>0</td>
                     </tr>
                     <tr>
                         <td>6.</td>
-                        <td>Architecture</td>
+                        <td>Architecture Dept.</td>
                         <td>0</td>
                     </tr>
                 </table>
