--- a/team.html
+++ b/team.html
@@ -37,22 +37,22 @@
                 </div>
                 <div class="co-convenor">
                     <div class="ann">
-                        <img src="./images/labeeb.png" alt="Convenor">
+                        <img src="./images/labeeb.png" alt="Co-Convenor">
                         <h1 class="name">MOHD LABEEB</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
                     <div class="ann">
-                        <img src="./images/ann.jpg" alt="Convenor">
+                        <img src="./images/ann.jpg" alt="Co-Convenor">
                         <h1 class="name">ANN VITHAYATHIL</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
                     <div class="ann">
-                        <img src="./images/nim.jpg" alt="Convenor">
+                        <img src="./images/nim.jpg" alt="Co-Convenor">
                         <h1 class="name">NIMMI MARIAM JOHN</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
                     <div class="ann">
-                        <img src="./images/sid.jpg" alt="Convenor">
+                        <img src="./images/sid.jpg" alt="Co-Convenor">
                         <h1 class="name">SIDHARTH SUNNY<L</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
