Add PUBG and ICE BREAK

--- a/results.html
+++ b/results.html
@@ -33,10 +33,28 @@
                 <div class="result-container">
                     <div class="event-container">
                         <h3 class="event-name">
-                            Results will be published soon.
+                            ICE BREAK
                         </h3>
+                        <ul class="winners">
+                            <li><span class="winner-name">1. ME </span><span class="winner-points">5 pts.</span></li>
+                            <li><span class="winner-name">2. EE </span><span class="winner-points">4 pts.</span></li>
+                            <li><span class="winner-name">3. CE </span><span class="winner-points">4 pts.</span></li>
+                            <li><span class="winner-name">4. EC </span><span class="winner-points">4 pts.</span></li>
+                            <li><span class="winner-name">5. CS </span><span class="winner-points">4 pts.</span></li>
+                            <li><span class="winner-name">6. Arch </span><span class="winner-points">3 pts.</span></li>
+                        </ul>
                     </div>
 
+                    <div class="event-container">
+                        <h3 class="event-name">
+                            PUBG MOBILE
+                        </h3>
+                        <ul class="winners">
+                            <li><span class="winner-name">1. CE </span><span class="winner-points">5 pts.</span></li>
+                            <li><span class="winner-name">2. ME </span><span class="winner-points">3 pts.</span></li>
+                            <li><span class="winner-name">3. EC </span><span class="winner-points">1 pts.</span></li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
