--- a/scoreboard.html
+++ b/scoreboard.html
@@ -77,6 +77,8 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="events.js"></script>
+    <script src="score.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
