--- a/schedule.html
+++ b/schedule.html
@@ -50,6 +50,21 @@
                             </tr>
                         </table>
                     </div>
+                    <div class="schedule-container">
+                        <h1 class="schedule-date">January 11</h1>
+                        <table class="schedule-table">
+                            <tr>
+                                <td>GULLY CRICKET</td>
+                                <td>8:15AM - 11:00PM<br><br>3:30PM - 6:00PM</td>
+                                <td>DHWANI STAGE</td>
+                            </tr>
+                            <tr>
+                                <td>PES MOBILE</td>
+                                <td>6:00PM - 7:00PM</td>
+                                <td>DHWANI STAGE</td>
+                            </tr>
+                        </table>
+                    </div>
             </div>
         </main>
         <footer>
