--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
                 <div class="co-convenor">
                     <div class="ann">
                         <img src="./images/labeeb.png" alt="Co-Convenor">
-                        <h1 class="name">MOHD LABEEB</h1>
+                        <h1 class="name">MUHAMMED LABEEB</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
                     <div class="ann">
