--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="ann">
                         <img src="./images/nim.jpg" alt="Co-Convenor">
-                        <h1 class="name">NIMMI MARIAM JOHN</h1>
+                        <h1 class="name">NIMMY MARIAM JOHN</h1>
                         <p class="event-post">Co-Convenor</p>
                     </div>
                     <div class="ann">
