--- a/results.html
+++ b/results.html
@@ -6,7 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DISHA '20 | College of Engineering Trivandrum</title>
     <link rel="stylesheet" href="main.css" type="text/css">
-    <script src="https://kit.fontawesome.com/bacb82f1fc.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156066754-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156066754-1');
+    </script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -30,33 +38,7 @@
         <main>
             <div class="content-container">
                 <h1 class="page-heading">Results</h1>
-                <div class="result-container">
-                    <div class="event-container">
-                        <h3 class="event-name">
-                            ICE BREAK
-                        </h3>
-                        <ul class="winners">
-                            <li><span class="winner-name">1. ME </span><span class="winner-points">5 pts.</span></li>
-                            <li><span class="winner-name">2. EE </span><span class="winner-points">4 pts.</span></li>
-                            <li><span class="winner-name">3. CE </span><span class="winner-points">4 pts.</span></li>
-                            <li><span class="winner-name">4. EC </span><span class="winner-points">4 pts.</span></li>
-                            <li><span class="winner-name">5. CS </span><span class="winner-points">4 pts.</span></li>
-                            <li><span class="winner-name">6. Arch </span><span class="winner-points">3 pts.</span></li>
-                        </ul>
-                    </div>
-
-                    <div class="event-container">
-                        <h3 class="event-name">
-                            PUBG MOBILE
-                        </h3>
-                        <ul class="winners">
-                            <li><span class="winner-name">1. CE </span><span class="winner-points">5 pts.</span></li>
-                            <li><span class="winner-name">2. ME </span><span class="winner-points">3 pts.</span></li>
-                            <li><span class="winner-name">3. EC </span><span class="winner-points">1 pts.</span></li>
-                        </ul>
-                    </div>
-                </div>
-
+                <div class="result-container" id="result-container"></div>
             </div>
         </main>
         <footer>
@@ -65,6 +47,8 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="events.js"></script>
+    <script src="results.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
