--- a/results.html
+++ b/results.html
@@ -23,9 +23,11 @@
             <nav>
                 <ul class="nav-ul">
                     <li class="nav-li icon">
-                        <a href="javascript:void(0);" class="nav-link" onclick="collapse()">
-                            <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
-                        </a>
+                        <div class="container" onclick="collapse(this)">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                            <div class="bar3"></div>
+                        </div>
                     </li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="index.html">Home</a></li>
                     <li class="nav-li" id="nav-link"><a class ="nav-link" href="scoreboard.html">Scoreboard</a></li>
