Update PES Score

--- a/results.html
+++ b/results.html
@@ -40,7 +40,11 @@
         <main>
             <div class="content-container">
                 <h1 class="page-heading">Results</h1>
-                <div class="result-container" id="result-container"></div>
+                <div class="result-container" id="result-container">
+                    <!-- <div class="event-container">
+                        <h3 class="event-name">MR/MS TECHIE</h3>
+                    </div> -->
+                </div>
             </div>
         </main>
         <footer>
