--- a/schedule.html
+++ b/schedule.html
@@ -40,41 +40,52 @@
         <main>
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
-                    <div class="schedule-container">
-                        <h1 class="schedule-date">January 10</h1>
-                        <table class="schedule-table">
-                            <tr>
-                                <td>ICE BREAK</td>
-                                <td>3:30PM</td>
-                                <td>DHWANI STAGE</td>
-                            </tr>
-                            <tr>
-                                <td>PUBG MOBILE</td>
-                                <td>5:00PM</td>
-                                <td>DHWANI STAGE</td>
-                            </tr>
-                            <tr>
-                                <td>DISHA TECHIE</td>
-                                <td>5:00PM</td>
-                                <td>EC DEPARTMENT</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="schedule-container">
-                        <h1 class="schedule-date">January 11</h1>
-                        <table class="schedule-table">
-                            <tr>
-                                <td>GULLY CRICKET</td>
-                                <td>8:15AM - 11:00AM<br><br>3:30PM - 6:00PM</td>
-                                <td>DHWANI STAGE</td>
-                            </tr>
-                            <tr>
-                                <td>PES MOBILE</td>
-                                <td>6:00PM - 7:00PM</td>
-                                <td>DHWANI STAGE</td>
-                            </tr>
-                        </table>
-                    </div>
+                <div class="schedule-container">
+                    <h1 class="schedule-date">January 12</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>EXPLORO</td>
+                            <td>9:30AM</td>
+                            <td>DHWANI STAGE</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
+                    <h1 class="schedule-date">January 11</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>GULLY CRICKET</td>
+                            <td>8:15AM - 11:00AM<br><br>3:30PM - 6:00PM</td>
+                            <td>DHWANI STAGE</td>
+                        </tr>
+                        <tr>
+                            <td>PES MOBILE</td>
+                            <td>6:00PM - 7:00PM</td>
+                            <td>DHWANI STAGE</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
+                    <h1 class="schedule-date">January 10</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>ICE BREAK</td>
+                            <td>3:30PM</td>
+                            <td>DHWANI STAGE</td>
+                        </tr>
+                        <tr>
+                            <td>PUBG MOBILE</td>
+                            <td>5:00PM</td>
+                            <td>DHWANI STAGE</td>
+                        </tr>
+                        <tr>
+                            <td>DISHA TECHIE</td>
+                            <td>5:00PM</td>
+                            <td>EC DEPARTMENT</td>
+                        </tr>
+                    </table>
+                </div>
+
             </div>
         </main>
         <footer>
