--- a/schedule.html
+++ b/schedule.html
@@ -46,7 +46,7 @@
                         <tr>
                             <td>EXPLORO</td>
                             <td>9:30AM</td>
-                            <td>DHWANI STAGE</td>
+                            <td>DHWANI<br>STAGE</td>
                         </tr>
                     </table>
                 </div>
