--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DISHA '20 | College of Engineering Trivandrum</title>
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156066754-1"></script>
     <script>
@@ -40,7 +40,7 @@
         <main>
             <div class="heading-main">
                 <div class="logo-container">
-                    <img class="logo" src="disha-logo.jpg" alt="DISHA '20">
+                    <img class="logo" src="./images/disha-logo.jpg" alt="DISHA '20">
                 </div>
                 <p class="word">DISHA</p>
                 <p class="year">&lsquo;20</p>
@@ -54,6 +54,6 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
