--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DISHA '20 | College of Engineering Trivandrum</title>
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156066754-1"></script>
     <script>
@@ -56,8 +56,8 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="events.js"></script>
-    <script src="score.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/events.js"></script>
+    <script src="./js/score.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
