--- a/results.html
+++ b/results.html
@@ -17,6 +17,7 @@
     </script>
 </head>
 <body>
+
     <div id="particles-js"></div>
     <div class="wrapper">
         <header>
@@ -41,9 +42,14 @@
             <div class="content-container">
                 <h1 class="page-heading">Results</h1>
                 <div class="result-container" id="result-container">
-                    <!-- <div class="event-container">
-                        <h3 class="event-name">MR/MS TECHIE</h3>
-                    </div> -->
+                    <div class="event-container">
+                        <h3 class="event-name">MR/MS TECHIE ROUND 1</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name"><a href="./results/techie_1.pdf" class="nav-link techie-link" target="_blank">View Result</a></span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </main>
