--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,39 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 13</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>JINGLE WRITING</td>
+                            <td>4:00PM - 4:30PM</td>
+                        </tr>
+                        <tr>
+                            <td>CREATIVE WRITING(MALAYALAM)</td>
+                            <td>4:30PM - 5:30PM</td>
+                        </tr>
+                        <tr>
+                            <td>CREATIVE WRITING(ENGLISH)</td>
+                            <td>5:30PM - 6:30PM</td>
+                        </tr>
+                        <tr>
+                            <td>PENCIL SKETCH</td>
+                            <td>4:00PM - 6:00PM</td>
+                        </tr>
+                        <tr>
+                            <td>SPOT DUBBING</td>
+                            <td>4:00PM - 6:00PM</td>
+                        </tr>
+                        <tr>
+                            <td>MR/MS TECHIE ROUND 2</td>
+                            <td>4:00PM - 6:30PM</td>
+                        </tr>
+                        <tr>
+                            <td>RECITATION(MALAYALAM)</td>
+                            <td>4:30PM - 6:30PM</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 12</h1>
                     <table class="schedule-table">
                         <tr>
