Add Jan 13 schedule

--- a/schedule.html
+++ b/schedule.html
@@ -44,6 +44,66 @@
                     <h1 class="schedule-date">January 13</h1>
                     <table class="schedule-table">
                         <tr>
+                            <td>ESSAY WRITING(MALAYALAM)</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EE 305</td>
+                        </tr>
+                        <tr>
+                            <td>ESSAY WRITING(HINDI)</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EE 306</td>
+                        </tr>
+                        <tr>
+                            <td>ESSAY WRITING(ENGLISH)</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>EE 305,306</td>
+                        </tr>
+                        <tr>
+                            <td>WATER COLOURING</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>EE 307</td>
+                        </tr>
+                        <tr>
+                            <td>ANTHAKSHARI</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>EC 204</td>
+                        </tr>
+                        <tr>
+                            <td>CHESS</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>GOLDEN WALKWAY</td>
+                        </tr>
+                        <tr>
+                            <td>CARROMS</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>PHYSICAL EDU DEPT.</td>
+                        </tr>
+                        <tr>
+                            <td>MR/MS TECHIE ROUND 2(2)</td>
+                            <td>4:00PM - 6:30PM</td>
+                            <td>EC 202</td>
+                        </tr>
+                        <tr>
+                            <td>PERSONA(PRELIMS)</td>
+                            <td>12:00PM - 1:00PM</td>
+                            <td>MECH TOP</td>
+                        </tr>
+                        <tr>
+                            <td>RECITATION(ENGLISH)</td>
+                            <td>4:30PM - 6:00PM</td>
+                            <td>EE 308</td>
+                        </tr>
+                        <tr>
+                            <td>BADMINTON(GIRLS)</td>
+                            <td>5:00PM - 8:00PM</td>
+                            <td>PHYSICAL EDU DEPT.</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
+                    <h1 class="schedule-date">January 13</h1>
+                    <table class="schedule-table">
+                        <tr>
                             <td>JINGLE WRITING</td>
                             <td>4:00PM - 4:30PM</td>
                         </tr>
