--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,56 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 15</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>DUO</td>
+                            <td>8:00AM - 9:30AM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>DISHA IDOL</td>
+                            <td>9:30AM - 12:00PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>DEBATE</td>
+                            <td>10:00AM - 12:00PM</td>
+                            <td>ARCHIE CORNER</td>
+                        </tr>
+                        <tr>
+                            <td>PICTURE PERCEPTION</td>
+                            <td>10:00AM - 11:00AM</td>
+                            <td>EE CELLAR</td>
+                        </tr>
+                        <tr>
+                            <td>WESTERN SOLO</td>
+                            <td>12:30PM - 2:00PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>EXTEMPORE(HINDI)</td>
+                            <td>2:00PM - 4:00PM</td>
+                            <td>A321A</td>
+                        </tr>
+                        <tr>
+                            <td>EXTEMPORE(ENGLISH)</td>
+                            <td>2:00PM - 4:00PM</td>
+                            <td>A321B</td>
+                        </tr>
+                        <tr>
+                            <td>NADANPATTU</td>
+                            <td>2:00PM - 3:30PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>ACAPELLA</td>
+                            <td>2:00PM - 3:30PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 14</h1>
                     <table class="schedule-table">
                         <tr>
