--- a/results.html
+++ b/results.html
@@ -43,6 +43,14 @@
                 <h1 class="page-heading">Results</h1>
                 <div class="result-container" id="result-container">
                     <div class="event-container">
+                        <h3 class="event-name">MR/MS TECHIE ROUND 2</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name"><a href="./results/techie_2.pdf" class="nav-link techie-link" target="_blank">View Result</a></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="event-container">
                         <h3 class="event-name">MR/MS TECHIE ROUND 1</h3>
                         <ul class="winners">
                             <li class="nav-li">
