Add Jan 16 schedule

--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,61 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 16</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>DOODLE ART</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>EE 308</td>
+                        </tr>
+                        <tr>
+                            <td>GUESS WHO</td>
+                            <td>4:00PM - 6:30PM</td>
+                            <td>EE 307</td>
+                        </tr>
+                        <tr>
+                            <td>VERSIFICATION (ENGLISH)</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EE 305,306</td>
+                        </tr>
+                        <tr>
+                            <td>DUMBCHARADES</td>
+                            <td>4:00PM - 6:00AM</td>
+                            <td>EC 202</td>
+                        </tr>
+                        <tr>
+                            <td>MAPPILAPATTU</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EC 204</td>
+                        </tr>
+                        <tr>
+                            <td>KHO KHO</td>
+                            <td>4:30PM - 6:30PM</td>
+                            <td>GROUND</td>
+                        </tr>
+                        <tr>
+                            <td>JAM PRELIMS</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>A321A</td>
+                        </tr>
+                        <tr>
+                            <td>ADZAP</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>EE 305</td>
+                        </tr>
+                        <tr>
+                            <td>SPOT COMMENTARY</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>EC 204</td>
+                        </tr>
+                        <tr>
+                            <td>BADMINTON (BOYS)</td>
+                            <td>5:00PM - 8:00PM</td>
+                            <td>PHYSICAL EDU. DEPT.</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 15</h1>
                     <table class="schedule-table">
                         <tr>
