--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,76 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 17</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>PROCESSION</td>
+                            <td>12:00PM - 1:30PM</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>LIGHT MUSIC</td>
+                            <td>3:00PM - 5:00PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>MR/MS TECHIE (FINALS)</td>
+                            <td>3:00PM - 5:00PM</td>
+                            <td>EC SEMINAR HALL</td>
+                        </tr>
+                        <tr>
+                            <td>STREET PLAY</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>ARCHIE CORNER</td>
+                        </tr>
+                        <tr>
+                            <td>DISHA IDOL</td>
+                            <td>5:00PM - 6:30PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>RECITATION (HINDI)</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>EC 202</td>
+                        </tr>
+                        <tr>
+                            <td>EXTEMPORE (HINDI)</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EE 305</td>
+                        </tr>
+                        <tr>
+                            <td>TABLE TENNIS (B,G)</td>
+                            <td>4:00PM - 8:00PM</td>
+                            <td>PHYSICAL EDU. DEPT</td>
+                        </tr>
+                        <tr>
+                            <td>VERSIFICATION (HINDI)</td>
+                            <td>4:00PM - 5:00PM</td>
+                            <td>EE 307</td>
+                        </tr>
+                        <tr>
+                            <td>VERSIFICATION (MALAYALAM)</td>
+                            <td>5:00PM - 6:00PM</td>
+                            <td>EE 307</td>
+                        </tr>
+                        <tr>
+                            <td>RJ HUNT (ROUND 2)</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>RADIO ROOM</td>
+                        </tr>
+                        <tr>
+                            <td>QUIZ PRELIMS</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>EE 308</td>
+                        </tr>
+                        <tr>
+                            <td>WALL PAINTING</td>
+                            <td>STARTS BY 2:00PM</td>
+                            <td>CIVIL WALL</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 16</h1>
                     <table class="schedule-table">
                         <tr>
@@ -60,7 +130,7 @@
                         </tr>
                         <tr>
                             <td>DUMBCHARADES</td>
-                            <td>4:00PM - 6:00AM</td>
+                            <td>4:00PM - 6:00PM</td>
                             <td>EC 202</td>
                         </tr>
                         <tr>
