Add Extempore(Malayalam) and Recitation(Hindi)

--- a/schedule.html
+++ b/schedule.html
@@ -74,7 +74,7 @@
                             <td>EC 202</td>
                         </tr>
                         <tr>
-                            <td>EXTEMPORE (HINDI)</td>
+                            <td>EXTEMPORE (MALAYALAM)</td>
                             <td>4:00PM - 5:00PM</td>
                             <td>EE 305</td>
                         </tr>
