--- a/results.html
+++ b/results.html
@@ -43,7 +43,7 @@
                 <h1 class="page-heading">Results</h1>
                 <div class="result-container" id="result-container">
                     <div class="event-container">
-                        <h3 class="event-name">MR/MS FINAL</h3>
+                        <h3 class="event-name">MR/MS TECHIE FINAL</h3>
                         <ul class="winners">
                             <li class="nav-li">
                                 <span class="winner-name techie-name">Thejus P Aditya (Electronics)</span>
