Add Monoact, disha idol, quiz

--- a/results.html
+++ b/results.html
@@ -52,6 +52,14 @@
                         </ul>
                     </div>
                     <div class="event-container">
+                        <h3 class="event-name">DISHA IDOL</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name techie-name">Navaneeth S Nair (Electronics)</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="event-container">
                         <h3 class="event-name">MR/MS TECHIE ROUND 2</h3>
                         <ul class="winners">
                             <li class="nav-li">
