--- a/results.html
+++ b/results.html
@@ -47,7 +47,10 @@
                         <ul class="winners">
                             <li class="nav-li">
                                 <span class="winner-name techie-name">Thejus P Aditya (Electronics)</span>
-                                <span class="winner-name"><a href="./results/techie_final.pdf" class="nav-link techie-link" target="_blank">View Result</a></span>
+                                <span class="winner-name"><a href="./results/techie_final.pdf" class="nav-link techie-link" target="_blank">View Final Result</a></span>
+                                <span class="winner-name"><a href="./results/techie_2.pdf" class="nav-link techie-link" target="_blank">View Round 2 Result</a></span>
+                                <span class="winner-name"><a href="./results/techie_1.pdf" class="nav-link techie-link" target="_blank">View Round 1Result</a></span>
+
                             </li>
                         </ul>
                     </div>
@@ -60,10 +63,10 @@
                         </ul>
                     </div>
                     <div class="event-container">
-                        <h3 class="event-name">MR/MS TECHIE ROUND 2</h3>
+                        <h3 class="event-name">RJ HUNT</h3>
                         <ul class="winners">
                             <li class="nav-li">
-                                <span class="winner-name"><a href="./results/techie_2.pdf" class="nav-link techie-link" target="_blank">View Result</a></span>
+                                <span class="winner-name techie-name">Shreya Sajeev (Electrical)</span>
                             </li>
                         </ul>
                     </div>
