Add Jan 18 Schedule

--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,61 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 18</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>FOOTBALL</td>
+                            <td>7:30 AM</td>
+                            <td>GROUND</td>
+                        </tr>
+                        <tr>
+                            <td>KHO KHO (FINALS)</td>
+                            <td>7:30 AM</td>
+                            <td>GROUND</td>
+                        </tr>
+                        <tr>
+                            <td>CARTOONING</td>
+                            <td>10:00AM - 12:00PM</td>
+                            <td>A321B</td>
+                        </tr>
+                        <tr>
+                            <td>FACE PAINTING</td>
+                            <td>3:00PM - 5:00PM</td>
+                            <td>GOLDEN WALKWAY</td>
+                        </tr>
+                        <tr>
+                            <td>PERSONA FINALS</td>
+                            <td>5:00PM - 7:00PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>MONOACT</td>
+                            <td>10:00AM - 12:00PM</td>
+                            <td>EC 202</td>
+                        </tr>
+                        <tr>
+                            <td>MIMICRY</td>
+                            <td>1:00PM - 2:30PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                        <tr>
+                            <td>QUIZ FINALS</td>
+                            <td>9:00AM - 12:00PM</td>
+                            <td>A321A</td>
+                        </tr>
+                        <tr>
+                            <td>RJ HUNT</td>
+                            <td>10:00AM - 1:00PM</td>
+                            <td>RADIO ROOM</td>
+                        </tr>
+                        <tr>
+                            <td>JAM FINALS</td>
+                            <td>2:30PM - 4:30PM</td>
+                            <td>CETAA HALL</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 17</h1>
                     <table class="schedule-table">
                         <tr>
