--- a/results.html
+++ b/results.html
@@ -55,6 +55,14 @@
                         </ul>
                     </div>
                     <div class="event-container">
+                        <h3 class="event-name">PERSONA</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name techie-name">Rohith Chivukula (Mechanical)</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="event-container">
                         <h3 class="event-name">DISHA IDOL</h3>
                         <ul class="winners">
                             <li class="nav-li">
