Add jan 19 schedule

--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,66 @@
             <div class="content-container">
                 <h1 class="page-heading">Schedule</h1>
                 <div class="schedule-container">
+                    <h1 class="schedule-date">January 19</h1>
+                    <table class="schedule-table">
+                        <tr>
+                            <td>ADAPTINE</td>
+                            <td>8:00AM - 8:45AM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>PREPARED SOLO</td>
+                            <td>8:45AM - 9:00AM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>MIMICRY</td>
+                            <td>9:00AM - 10:00AM</td>
+                            <td>SARGAM STAGE</td>
+                        </tr>
+                        <tr>
+                            <td>DUET</td>
+                            <td>9:30AM - 10:30AM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>MIME</td>
+                            <td>10:30AM - 11:30AM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>BATTLE OF BANDS</td>
+                            <td>12:00PM - 1:30PM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>WALL PAINTING</td>
+                            <td>ENDS AT 12:30PM</td>
+                            <td>CIVIL WALL</td>
+                        </tr>
+                        <tr>
+                            <td>GROUP DANCE</td>
+                            <td>1:30PM - 2:30PM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>SKIT</td>
+                            <td>2:30PM - 4:00PM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>FASHION SHOW</td>
+                            <td>4:00PM - 6:00PM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                        <tr>
+                            <td>CLOSING CEREMONY</td>
+                            <td>6:30PM - 8:30PM</td>
+                            <td>DJ HALL</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="schedule-container">
                     <h1 class="schedule-date">January 18</h1>
                     <table class="schedule-table">
                         <tr>
