Add face of disha

--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
                                 <span class="winner-name techie-name">Thejus P Aditya (Electronics)</span>
                                 <span class="winner-name"><a href="./results/techie_final.pdf" class="nav-link techie-link" target="_blank">View Final Result</a></span>
                                 <span class="winner-name"><a href="./results/techie_2.pdf" class="nav-link techie-link" target="_blank">View Round 2 Result</a></span>
-                                <span class="winner-name"><a href="./results/techie_1.pdf" class="nav-link techie-link" target="_blank">View Round 1Result</a></span>
+                                <span class="winner-name"><a href="./results/techie_1.pdf" class="nav-link techie-link" target="_blank">View Round 1 Result</a></span>
 
                             </li>
                         </ul>
@@ -59,6 +59,26 @@
                         <ul class="winners">
                             <li class="nav-li">
                                 <span class="winner-name techie-name">Rohith Chivukula (Mechanical)</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="event-container">
+                        <h3 class="event-name">FACE OF DISHA BOYS</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name techie-name">Advaith Uday (Electrical)</span>
+                                <span class="winner-name"><a href="https://www.instagram.com/p/B7OBo8Mp7l7" class="nav-link techie-link" target="_blank">View Sumbission</a></span>
+
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="event-container">
+                        <h3 class="event-name">FACE OF DISHA GIRLS</h3>
+                        <ul class="winners">
+                            <li class="nav-li">
+                                <span class="winner-name techie-name">Lakshmy Thampy (Mechanical)</span>
+                                <span class="winner-name"><a href="https://www.instagram.com/p/B7Oh7Zcpqpb/" class="nav-link techie-link" target="_blank">View Submission</a></span>
+
                             </li>
                         </ul>
                     </div>
