--- a/results.html
+++ b/results.html
@@ -62,7 +62,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="event-container">
+                    <!-- <div class="event-container">
                         <h3 class="event-name">FACE OF DISHA BOYS</h3>
                         <ul class="winners">
                             <li class="nav-li">
@@ -71,7 +71,7 @@
 
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="event-container">
                         <h3 class="event-name">FACE OF DISHA GIRLS</h3>
                         <ul class="winners">
