--- a/results.html
+++ b/results.html
@@ -72,7 +72,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="event-container">
+                    <!-- <div class="event-container">
                         <h3 class="event-name">FACE OF DISHA GIRLS</h3>
                         <ul class="winners">
                             <li class="nav-li">
@@ -81,7 +81,7 @@
 
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="event-container">
                         <h3 class="event-name">DISHA IDOL</h3>
                         <ul class="winners">
